# rsomics-vcf-index

./: Cargo.toml  README.md
benches/: bench.rs
src/: cli.rs  lib.rs
tests/: compat.rs
tests/golden/: small.vcf  sv.vcf
